<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Remoteclient</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="bew_button1_text">Up</string>
    <string name="bew_button2_text">Left</string>
    <string name="bew_button3_text">Right</string>
    <string name="bew_button4_text">Down</string>
    <string name="bew_button5_text">Stop</string>
    <string name="menu_button1_text">Bewegen</string>
    <string name="menu_button2_text">Sprach-\nausgabe</string>
    <string name="menu_button3_text">Specials</string>
    <string name="menu_button4_text">Netzwerk</string>
    <string name="menu_button5_text">About</string>
    <string name="menu_button6_text">Beenden</string>
    <string name="titel_sprachausgabe">Sprachausgabe</string>
    <string name="spk_editText1_hinttext">Text eingeben</string>
    <string name="spk_saveload_button_text">speichern/laden</string>
    <string name="spkdial_speichernbutton_text">speichern</string>
    <string name="spkdial_ladenbutton_text">laden</string>
    <string name="spkdial_closebutton_text">abbrechen</string>
    <string name="sprachausgabe_text">Sprachausgabe</string>
    <string name="verbindungstitel_text">Netzwerkverbindung</string>
    <string name="verbindungsstatus_text">Verbindungsstatus : </string>
    <string name="verbindungsstatus_wert_text">nicht verbunden</string>
    <string name="verbindungsip_text">IP-Adresse : </string>
    <string name="verbindungsip_eingabe">0.0.0.0</string>
    <string name="verbindungsbutton_text">verbinden</string>
    <string name="button_close_text"> Schließen </string>
    <string name="bewegungsauswahl_radiobutton1_text">l. Arm bew.</string>
    <string name="bewegungsauswahl_radiobutton2_text">r. Arm bew.</string>
    <string name="bewegungsauswahl_radiobutton3_text">Laufen</string>
    <string name="bewegungsauswahl_radiobutton4_text">Kopf bew.</string>
    
    <string name="specials_button1_text"> Ausruhen </string>
    <string name="specials_button2_text"> Setzen/Aufstehen </string>
    <string name="specials_button3_text"> Tanzen </string>
    <string name="specials_button4_text"> Winken </string>
    <string name="specials_button5_text"> Stirn wischen </string>
    
    <string name="acb_m1_text">Bewegen</string>
    <string name="acb_m2_text">Sprechen</string>
    <string name="acb_m3_text">Specials</string>
    <string name="acb_m4_text">Netzwerk</string>
    <string name="acb_m5_text">Einstellungen</string>
    
    <string name="title_activity_bewegung">Bewegungsmodus</string>
    <string name="title_activity_sprachausgabe">Sprachausgabe</string>
    <string name="title_activity_config">Netzwerkverbindung</string>
    <string name="title_activity_specials">Specials</string>
    <string name="title_activity_setting">Einstellungen</string>
    
    <string name="About_Headline">Android Remote Steuerung</string>
    
    <string name="About_Description">
        Das ist eine App um den NAO zu steuern.\n
        Die NAO-Remote-Steuerung wurde im Rahmen des 
        Softwareengeneering-Praktikums an der TU-Chemnitz entwickelt und im Rahmen des
        „Differenziertes Mentoring- und Betreuungsprogramm zur Verbesserung der Studienbedingungen 
        und der Qualität in der Lehre an der TU Chemnitz“ gefördert\n\n
        Diese Software ist ausschließlich zur nicht kommerziellen Nutzung gedacht.
    </string>
    <string name="About_Button">Einverstanden</string>
    <string name="set_videobewalpha_text">Video-Sichtbarkeit in Bew.-Act.:</string>
    <string name="set_head1">Einstellungen</string>
    <string name="set_video_on_text">Video ein-/ausschalten</string>
    <string name="set_parameterheadline_text">Parametereinstellung</string>
    <string name="set_param_movF_text">Weite beim Vorwätslaufen:</string>
    <string name="set_param_movB_text">Weite beim Rückwärtslaufen:</string>
    <string name="set_param_movD_text">Drehwinkel pro Drehbewegung:</string>
    <string name="set_param_armHR_text">Winkel Armbewegung hoch/runter:</string>
    <string name="set_param_armLR_text">Winkel Armseitwärtsbewegung:</string>
    <string name="set_param_hadF_text">Neigewinkel für Kopfbew. hinter:</string>
    <string name="set_param_hadB_text">Neigewinkel für Kopfbew. vor:</string>
    <string name="set_param_hadD_text">Drehwinkel pro Kopfdrehbewegung:</string>

</resources>