<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    
    <item android:id="@+id/acb_video" android:showAsAction="always"
        android:title="Video"
		android:checkable="false" android:checked="false"
		android:icon="@drawable/camsymbol"/>
    
    <item android:id="@+id/acb_test" android:showAsAction="always"
        android:title="Remoteapp" android:icon="@drawable/drop_menu">
        <menu>
            <item android:id="@+id/acb_m_1" android:title="@string/acb_m1_text"/>
            <item android:id="@+id/acb_m_2" android:title="@string/acb_m2_text"/>
            <item android:id="@+id/acb_m_3" android:title="@string/acb_m3_text"/>
            <item android:id="@+id/acb_m_4" android:title="@string/acb_m4_text"/>
            <item android:id="@+id/acb_m_5" android:title="@string/acb_m5_text"/>
        </menu>
    </item>
    
    <item android:id="@+id/acb_connect" android:showAsAction="always"
        android:title="Netzwerkverbindung"
		android:checkable="false" android:checked="false"
		android:icon="@drawable/network_disconnected"/>
    
    <item android:id="@+id/acb_battery" android:showAsAction="always"
        android:title="NAO Batteriestatus"
		android:checkable="false" android:checked="false"
		android:icon="@drawable/bat"/>
    
    
<!-- Navigation submenu -->
<!-- 	<item android:id="@+id/menu_nav" android:title="titel"> -->
<!-- 		<menu> -->
<!-- 			<group android:id="@+id/menu_nav_group" -->
<!-- 				android:checkableBehavior="single"> -->
				
<!-- 				<item android:id="@+id/menu_nav_tabs" android:title="tab1" android:checked="true" /> -->

<!-- 				<item android:id="@+id/menu_nav_drop_down" android:title="tab2" /> -->

<!-- 				<item android:id="@+id/menu_nav_label" android:title="tab3" /> -->
<!-- 			</group> -->
<!-- 		</menu> -->
<!-- 	</item> -->
	
</menu>