<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    android:orientation="vertical"
	    android:padding="12dp" >

	    <ImageView
	        android:id="@+id/aboutdial_logo"
	        android:layout_width="wrap_content"
	        android:layout_height="100dp"
	        android:contentDescription="Logo TU Chemnitz"
	        android:padding="10dp"
	        android:src="@drawable/tu_chemnitz_de3" />

	    <TextView
	        android:id="@+id/aboutdial_head"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="12dp"
	        android:text="@string/About_Headline"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
    
	    <TextView
	        android:id="@+id/aboutdial_about"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:padding="12dp"
	        android:text="@string/About_Description" />

	    <Button
	        android:id="@+id/aboutdial_closebutton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/About_Button" />

	</LinearLayout>

</ScrollView>